Installing MariaDb through ansible on linux server

--- a/site.yml
+++ b/site.yml
@@ -29,6 +29,5 @@
   tasks:
     - name: Install mariadb
       dnf:
-        name:
-          - mariadb
+        name: mariadb105-server
         state: latest
