--- a/site.yml
+++ b/site.yml
@@ -31,3 +31,11 @@
       dnf:
         name: mariadb105-server
         state: latest
+
+- hosts: file_servers
+  become: true
+  tasks:
+    - name: Install mariadb
+      apt:
+        name: mariadb-server
+        state: latest
