--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,7 @@
   pre_tasks:
 
     - name: install updates (Ubuntu)
+      tags: always
       apt:
         upgrade: dist
         update_cache: yes
@@ -14,6 +15,7 @@
   become: true
   tasks:
     - name: install vim and htop  package and update cache repository index
+      tags: always
       dnf:
         name:
           - vim
@@ -28,6 +30,7 @@
   become: true
   tasks:
     - name: Install mariadb
+      tags: Amazon,mariadb
       dnf:
         name: mariadb105-server
         state: latest
@@ -36,11 +39,13 @@
   become: true
   tasks:
     - name: Install mariadb
+      tags: Ubuntu,mariadb
       apt:
         name: mariadb-server
         state: latest
 
     - name: Install samba
+      tags: Ubuntu,samba
       apt:
         name: samba
         state: latest
