--- a/site.yml
+++ b/site.yml
@@ -70,8 +70,8 @@
 
   - name: install terraform
     unarchive:
-      src: https://releases.hashicorp.com/terraform/1.5.1/terraform_1.5.1_darwin_amd64.zip
-      dest: /etc/terraform/
+      src: https://releases.hashicorp.com/terraform/1.5.1/terraform_1.5.1_linux_amd64.zip
+      dest: /usr/local/bin
       remote_src: yes
       mode: 0755
       owner: root
